# lurk-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
fcomm/: Cargo.toml
fcomm/src/: lib.rs
src/: eval.rs  lib.rs  repl.rs
src/circuit/: circuit_frame.rs
src/proof/: groth16.rs
