[package]
name = "lurk"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Coming Soon"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
bellperson = { version = "0.18.0", default-features = false, optional = true }
dirs = "4.0.0"
blstrs = "0.4.1"
ff = "0.11.0"
generic-array = "0.14.4"
itertools = "0.9"
merlin = "2.0.0"
neptune = { version = "5.1.0", default-features = false, features = ["arity2","arity4","arity8","arity16"], optional = true }
nova = { package = "nova-snark", version = "0.4.0", optional = true }
once_cell = "1.9.0"
pairing_lib = { version = "0.21", package = "pairing" }
rand = "0.8"
getrandom = { version = "0.2.5" }
rustyline = { version = "9.0.0", optional = true }
rustyline-derive = { version = "0.5.0", optional = true }
rand_xorshift = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.8.0", features = ["rayon"] }
ahash = "0.7.6"
pasta_curves = "0.3.0"
string-interner = "0.14.0"
rayon = "1.5.1"
dashmap = "5.0.0"

[features]
default = ["gpu", "not-wasm"]
# Dependencies and features unsupported/unwanted in wasm
not-wasm = [ "bellperson/default", "rustyline", "rustyline-derive", "neptune" ]

gpu = ["neptune/opencl"]
# A wasm friendly build
wasm = [
  "getrandom/js",
  "bellperson/wasm",
  "neptune"
]

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "eval"
harness = false

[workspace]
members = [
  "lurk_macro",
]


[patch.crates-io]
# bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "instance-aggregation" }
bellperson = { git = "https://github.com/yatima-inc/bellperson", branch = "acs/wasm-support" }
nova = { git = "https://github.com/porcuquine/nova", package = "nova-snark" }
